--- a/Client/Angular/src/app/aboutus/aboutus.component.html
+++ b/Client/Angular/src/app/aboutus/aboutus.component.html
@@ -1,9 +1,9 @@
-<header pageTitle="ElishERP" imageUrl="dashboard-black" helpType="homepage"></header>
+<dash-header pageTitle="ElishERP" imageUrl="dashboard-black" helpType="homepage"></dash-header>
 <mat-tab-group class="tab-group">
     <mat-tab label="Manage">
         <mat-card>
             <mat-card-title class="middle-headline">HCM Cloud</mat-card-title>
-            <mat-card-subtitle>Employee Payroll, Leave & Attendance <button mat-raised-button color="primary">HCM App</button></mat-card-subtitle>
+            <mat-card-subtitle>Employee Payroll, Leave & Attendance <button mat-raised-button color="primary" routerLink="/employee">HCM App</button></mat-card-subtitle>
             <mat-divider></mat-divider>
             <mat-card-title class="middle-headline">eHealth Lab Cloud</mat-card-title>
             <mat-card-subtitle>Health Test LAB Management<button mat-raised-button>eLAB App</button></mat-card-subtitle>
