updated app links
updated app links

--- a/Client/Angular/src/app/aboutus/aboutus.component.html
+++ b/Client/Angular/src/app/aboutus/aboutus.component.html
@@ -3,7 +3,9 @@
     <mat-tab label="Manage">
         <mat-card>
             <mat-card-title class="middle-headline">HCM Cloud</mat-card-title>
-            <mat-card-subtitle>Employee Payroll, Leave & Attendance <button mat-raised-button color="primary" routerLink="/employee">HCM App</button></mat-card-subtitle>
+            <mat-card-subtitle>Employee Payroll, Leave & Attendance <a routerLink="/employee" target="_blank" color="primary" mat-raised-button>HCM Payroll App</a>
+                <!--    <button mat-raised-button color="primary" routerLink="/employee">HCM App</button>
+                --></mat-card-subtitle>
             <mat-divider></mat-divider>
             <mat-card-title class="middle-headline">eStore App</mat-card-title>
             <mat-card-subtitle>Online Store Management<a href="https://elish-estore.firebaseapp.com" target="_blank" color="primary" mat-raised-button>eCommerce App</a></mat-card-subtitle>
