--- a/Client/Angular/src/app/aboutus/aboutus.component.html
+++ b/Client/Angular/src/app/aboutus/aboutus.component.html
@@ -4,26 +4,26 @@
         <mat-card>
             <mat-card-title class="middle-headline">HCM Cloud</mat-card-title>
             <mat-card-subtitle>Employee Payroll, Leave & Attendance <a routerLink="/employee" target="_blank" color="primary" mat-raised-button>HCM Payroll App</a>
-                <!--    <button mat-raised-button color="primary" routerLink="/employee">HCM App</button>
-                --></mat-card-subtitle>
+            <!--    <button mat-raised-button color="primary" routerLink="/employee">HCM App</button>
+            --></mat-card-subtitle>
             <mat-divider></mat-divider>
             <mat-card-title class="middle-headline">eStore App</mat-card-title>
             <mat-card-subtitle>Online Store Management<a href="https://elish-estore.firebaseapp.com" target="_blank" color="primary" mat-raised-button>eCommerce App</a></mat-card-subtitle>
             <mat-divider></mat-divider>
             <mat-card-title class="middle-headline">eHealth Lab Cloud</mat-card-title>
-            <mat-card-subtitle>Health Test LAB Management<button mat-raised-button>eLAB App</button></mat-card-subtitle>
+            <mat-card-subtitle>Health Test LAB Management<a href="https://atrackin.firebaseapp.com/" target="_blank" color="primary" mat-raised-button>eLAB App</a></mat-card-subtitle>
             <mat-divider></mat-divider>
             <mat-card-title class="middle-headline">CRM Cloud</mat-card-title>
-            <mat-card-subtitle>Customer, Sales & Marketing <button mat-raised-button>CRM App</button></mat-card-subtitle>
+            <mat-card-subtitle>Customer, Sales & Marketing <a href="https://atrackin.firebaseapp.com/" target="_blank" color="primary" mat-raised-button>CRM App</a></mat-card-subtitle>
             <mat-divider></mat-divider>
             <mat-card-title class="middle-headline">Tracker Cloud</mat-card-title>
             <mat-card-subtitle>GPS/Mobile Asset/Employee <a href="https://alivetracking.firebaseapp.com" target="_blank" color="primary" mat-raised-button>GPS Tracking App</a></mat-card-subtitle>
             <mat-divider></mat-divider>
             <mat-card-title class="middle-headline">Attendance System</mat-card-title>
-            <mat-card-subtitle>GPS/Picture Employee <button mat-raised-button>Attendance App</button></mat-card-subtitle>
+            <mat-card-subtitle>GPS/Picture Employee <a href="https://alivetracking.firebaseapp.com" target="_blank" color="primary" mat-raised-button>Attendance App</a></mat-card-subtitle>
             <mat-divider></mat-divider>
             <mat-card-title class="middle-headline">Visitor Management</mat-card-title>
-            <mat-card-subtitle>GPS/Picture Visitor Management <button mat-raised-button>Visitor App</button></mat-card-subtitle>
+            <mat-card-subtitle>GPS/Picture Visitor Management <a href="https://alivetracking.firebaseapp.com" target="_blank" color="primary" mat-raised-button>Visitor Record App</a></mat-card-subtitle>
             <mat-divider></mat-divider>
             <mat-card-title class="middle-headline">Supply Chain Management</mat-card-title>
             <mat-card-subtitle>Inventory/Sales Management <button mat-raised-button>Live Inventory App</button></mat-card-subtitle>
